add auth with firebase

--- a/src/styles/headerIndex.css
+++ b/src/styles/headerIndex.css
@@ -9,6 +9,31 @@
     height: 40px;
     padding: 5px 10%;
 }
+.userHead{
+    color: white;
+}
+
+.button_closeSesion{
+    cursor: pointer;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    border: 1px solid white;
+    border-radius: 5px;
+    color: white;
+    background-color: transparent;
+}
+
+.button_closeSesion:hover{
+    transition: 250ms;
+    background-color: rgb(121, 30, 30);
+    border: 1px solid rgb(121, 30, 30);
+}
+
+.loginRedirect{
+    margin-left: 10px;
+}
 
 .header .logo{
     cursor:pointer;
@@ -39,6 +64,7 @@
 }
 
 .header .nav-links a{
+    font-size: 13px;
     font: 700;
     color: #ffffff;
     text-decoration: none;
