--- a/src/styles/headerIndex.css
+++ b/src/styles/headerIndex.css
@@ -106,9 +106,6 @@
     width: 100%;
     height: 500px;
     background-position-y: -290px;
-}
-
-.banner{
     padding-top: 10px;
     font-family: 'Plus Jakarta Sans', sans-serif;
     color: white;
@@ -141,4 +138,120 @@
     cursor: pointer;
     color: white;
     border: 1px solid rgb(24, 121, 24);
+}
+
+/*Responsive*/
+
+@media (max-width:1024px) {
+    .banner{
+        height: 370px;
+    }
+}
+
+@media(max-width:912px){
+.banner {
+    background-position-y: -100px;
+}
+
+}
+
+@media (max-width:820px) {
+.banner{
+    background-size: auto;
+    background-position-y: -177px;
+}
+.banner h1{
+    font-size: 34px;
+}
+.header .nav-links li {
+    padding: 0 11px;
+}
+.header {
+    padding: 5px 7%;
+}
+}
+
+@media(max-width:768px){
+.banner h1{
+    font-size: 34px;
+}
+.buttonMenu {
+    margin-top: 20px;
+    width: 80%;
+    margin-left: 10%;
+}
+.buttonMenu button {
+    width: 40%;
+}
+.header .nav-links li {
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    display: inline-block;
+    padding: 0px 8px;
+    font-weight: 100;
+    font-size: 13px;
+}
+.header {
+    padding: 5px 5%;
+}
+}
+
+@media (max-width:540px) {
+.banner {
+    padding-top: 138px;
+}
+.banner h1 {
+    font-size: 34px;
+    padding-left: 5px;
+}
+.buttonMenu button {
+    width: 60%;
+    font-size: 15px;
+}
+.header .nav-links li {
+    padding: 0px 8px;
+}
+.header {
+    padding: 8px 12%;
+}
+.header .logo {
+    display: none;
+}
+.header .nav-links a {
+    font-size: 11px;
+}
+.header .nav-links li {
+    font-size: 11px;
+}
+}
+
+@media(max-width:414px){
+    .banner {
+        background-position-x: -238px;
+        width: 108%;
+    }
+    .header {
+        padding: 9px 5%;
+    }
+    .header .nav-links li {
+        font-size: 9px;
+    }
+}
+
+@media(max-width: 393px){
+    .banner{
+        width: 110%;
+    }
+    .buttonMenu button {
+        width: 66%;
+        height: 39px;
+    }
+}
+
+@media(max-width: 375px){
+    .banner {
+        width: 112%;
+    }
+    .header{
+        padding: 0;
+    }
 }
