--- a/src/styles/tarjetaRestauranteIzq.css
+++ b/src/styles/tarjetaRestauranteIzq.css
@@ -6,6 +6,7 @@
 }
 
 .tituloPlatillo{
+    font-weight: 100;
     margin-left: 20px;
     text-align: left;
     font-size: 40px;
@@ -28,6 +29,7 @@
 }
 
 .textoPlatillo h2{
+    font-weight: 100;
     font-family: 'Montserrat', sans-serif; 
     font-size: 20px;
     padding-left: 15px;
@@ -50,6 +52,7 @@
 }
 
 .estrellas h3{
+    font-weight: 100;
     font-family: 'Montserrat', sans-serif;
     padding-top: 9px;
 }
