--- a/src/styles/headerIndex.css
+++ b/src/styles/headerIndex.css
@@ -1,13 +1,15 @@
 .header{
     position: fixed;
+    z-index: 40;
     width: 100%;    
-    background: rgba(217, 217, 217, 0.03);
+    /* background-color: rgba(203, 27, 27, 0.03); */
     box-shadow: inset 1px 170px 59px rgba(0, 0, 0, 0.51);
     display: flex;
     justify-content: space-between;
     align-items: end;
-    height: 40px;
+    height: 50px;
     padding: 5px 10%;
+    place-items: center;
 }
 .userHead{
     color: white;
@@ -31,6 +33,12 @@
     border: 1px solid rgb(121, 30, 30);
 }
 
+.loginRedirect:hover{
+    transform: scale(0.3);
+    transition: all 250ms;
+
+}
+
 .loginRedirect{
     margin-left: 10px;
 }
@@ -45,6 +53,7 @@
     height: 60px;
     width: 100%;
     transition: all 0.3s;
+    padding-bottom: 10px; /* Se hace este padding para que la imagen chiquita se vea centrada, puede cambiar */
 }
 
 .header .logo img:hover{
@@ -53,6 +62,7 @@
 
 .header .nav-links{
     list-style: none;
+    /* place-items: center; */
 }
 
 .header .nav-links li{
@@ -61,6 +71,7 @@
     padding: 0 20px;
     font-weight: 100;
     font-size: 13px;
+    color: white;
 }
 
 .header .nav-links a{
@@ -73,7 +84,7 @@
 .header .nav-links li:hover{
     transition: all 0.3s;
     transform: scale(1.1);
-
+    cursor: pointer;
 }
 
 .header .nav-links li a:hover{
