--- a/src/styles/Aboutus.css
+++ b/src/styles/Aboutus.css
@@ -1,8 +1,9 @@
 .h1Contacts{
-    margin-top: 60px;
+    margin-top: 0px;
     font-size: 35px;
     font-weight: 300;
     margin-left: 50px;
+    padding-top: 80px;
 }
 .contactsDiv{
     width: 80%;
@@ -10,4 +11,8 @@
     display: flex;
     flex-wrap: wrap;
     margin-left: 10%;
+}
+
+.espacioVacio{
+    margin-top: 25%;
 }
