--- a/src/styles/Restaurantes.css
+++ b/src/styles/Restaurantes.css
@@ -8,8 +8,8 @@
 }
 
 .h1Restaurante{
-    font-weight: 500;
-    font-size: 45px;
-    margin-top: 50px;
-    margin-left: 30px;
+    font-weight: 300;
+    font-size: 35px;
+    padding-top: 80px;
+    margin-left: 50px;
 }
